--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <h1 id="time">Time</h1>
     <h1 id="date">Date</h1>
 
+    <input type="text" id="search" autofocus onchange="search()">
+
     <script src="main.js"></script>
 </body>
 
