--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h1 id="time">Time</h1>
     <h1 id="date">Date</h1>
 
-    <input type="text" id="search" autofocus onchange="search()">
+    <input type="text" id="search" autofocus onchange="new NewTab().handleSearch()">
 
     <script src="main.js"></script>
 </body>
