New shortcut system added / It has a database, with options to add and remove shortcuts

--- a/pages/shortcuts/index.html
+++ b/pages/shortcuts/index.html
@@ -8,15 +8,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body onload="loadData()">
     <h1>Shortcuts added:</h1>
-    <ul id="shortcuts">
-        <li>fuck you</li>
-        <li>fuck you</li>
-        <li>fuck you</li>
-    </ul>
+    <ul id="shortcuts"></ul>
 
-    <button>Add shortcut</button>
+    <button id="addShortcut">Add shortcut</button>
+    <button id="removeShortcut">Remove shortcut</button>
 
     <script src="main.js"></script>
 </body>
